--- a/HW1/index.html
+++ b/HW1/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Shop</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>HW1</title>
 </head>
 <body>
 	<h1>Hello, World</h1>
