save file index.js

--- a/React + Redux(LoftSchool) + HW/Learn React/01 - Create component/index.html
+++ b/React + Redux(LoftSchool) + HW/Learn React/01 - Create component/index.html
@@ -27,7 +27,7 @@
 
       const App = () => {
         return (
-          <React.Fragment>
+          <React.Fragment> <!-- Чтобы не было лишнего div в верстке-->
             <News />
             <Comments />
           </React.Fragment>
