change in index-html file

--- a/JS Challenge 30Tasks of 30Days/25 - Event Capture, Propagation, Bubbling and Once/index-finish.html
+++ b/JS Challenge 30Tasks of 30Days/25 - Event Capture, Propagation, Bubbling and Once/index-finish.html
@@ -34,7 +34,7 @@
     </style>
     <button></button>
     <script>
-        const div = document.auerySelector('div');
+        const div = document.querySelector('div');
         const button = document.querySelector('button');
         function logText(e) {
             console.log(this.classList.value);
